--- a/views/listbusiness.html
+++ b/views/listbusiness.html
@@ -10,7 +10,7 @@
                 <div class="list-back">
                     <div data-angular-treeview="true" data-tree-model="roleList" data-node-id="id" data-node-label="name">
                         <div> <div data-node-children="children" style="padding-left:10px">
-
+                            </div>
                         </div>
                     </div>
                 </div>
