--- a/views/detail.html
+++ b/views/detail.html
@@ -82,7 +82,7 @@
             <div class="col-md-3"></div>
             <div class="col-md-6">
                 <div class="image-row">
-                    <img src="{{img.image|imagepath}}" class="lightbox" ng-click="imagelightbox(img.image|imagepath)" height="150px" width="150px" ng-repeat="img in detail.images">
+                    <img src="{{img.image|imagepath}}" class="lightbox" ng-click="imagelightbox({{img.image|imagepath}})" height="150px" width="150px" ng-repeat="img in detail.images">
 
 
 
