--- a/views/detail.html
+++ b/views/detail.html
@@ -77,7 +77,7 @@
         </div>
     </div>
 
-    <div class="container">
+    <div class="container" ng-if="detail.images!=''">
         <div class="row">
             <div class="col-md-3"></div>
             <div class="col-md-6">
@@ -162,7 +162,6 @@
                         </div>
                     </div>
                     <div class="video-you">
-                        {{detail.listing.video}}
                         <iframe width="84%" height="315" src="//www.youtube.com/embed/{{detail.listing.video}}">
                         </iframe>
                     </div>
