--- a/views/category.html
+++ b/views/category.html
@@ -69,7 +69,7 @@
                             </p>
                             </div>
 
-                            <div class="img-cat">
+                            <div class="img-cat" ng-if="list.type==1">
                            <img src="{{'png/free.png'|imagepath2}}">
                             </div>
                         <div class="cate-social">	
