--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -28,6 +28,9 @@ width: 163px;
     font-size: 124%;
     /* font-weight: 100; */
 }
+.posii{
+position: static !important;
+}
 .onlycursor:hover{
     cursor: pointer;
 }
@@ -71,6 +74,10 @@ width: 163px;
 }
 .mrt14 {
     margin-top: 14px;
+}
+.more-text {
+margin-bottom: 30px;
+}
 }
 .demo {
     color: red;
@@ -445,12 +452,7 @@ a {
     -o-transition: 300ms;
     transition: 300ms;
 }
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
     font-family: 'Roboto', sans-serif;
 }
 .btn {
@@ -1002,42 +1004,7 @@ span.stButton_gradient {
     position: relative;
     z-index: 3;
 }
-.left-sidebar h2:after,
-h2.title:after {
-    content: " ";
-    position: absolute;
-    border: 1px solid #049fb3;
-    bottom: 8px;
-    left: 0;
-    width: 100%;
-    height: 0;
-    z-index: -2;
-}
-.left-sidebar h2:before {
-    content: " ";
-    position: absolute;
-    background: #fff;
-    bottom: -6px;
-    width: 130px;
-    height: 30px;
-    z-index: -1;
-    left: 50%;
-    margin-left: -65px;
-}
-h2.title:before {
-    content: " ";
-    position: absolute;
-    background: #FFFFFF;
-    bottom: -6px;
-    width: 220px;
-    height: 30px;
-    z-index: -1;
-    left: 50%;
-    margin-left: -110px;
-    /* color: #fff; */
-    /* padding: 8px; */
-    border: 1px solid #049fb3;
-}
+
 .category-products .panel {
     background-color: #FFFFFF;
     border: 0px;
@@ -1155,15 +1122,21 @@ h2.title:before {
 .features_items {
     overflow: hidden;
 }
+.fortitle {
+border-bottom: 1px solid #049fb3;
+margin-bottom: 30px;
+height: 17px;
+}
 h2.title {
     color: #049fb3;
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
-    /* font-weight: 700; */
-    /* margin: 0 15px; */
     text-transform: uppercase;
-    margin-bottom: 30px;
-    position: relative;
+    width: 315px;
+    border: 1px solid;
+    padding: 8px;
+    margin: 0 auto;
+    background: white;
 }
 .product-image-wrapper {
     /* border:1px solid #F7F7F5; */
