--- a/views/detail.html
+++ b/views/detail.html
@@ -47,19 +47,9 @@
                     <div class="col-md-5">
 
 
-                        <div class="pull-right">
-                            <!--                           <map id="map_canvas" class="map_canvas"glat="{{detail.listing.lat}}" glang="{{detail.listing.long}}" width="300" height="250"></map>-->
-                            <google-map center="centerProperty" zoom="zoomProperty" markers="markersProperty" latitude="clickedLatitudeProperty" longitude="clickedLongitudeProperty" mark-click="false" draggable="true" style="height: 164px; width: 100%;">
+                        <div class="">
+                            <google-map center="centerProperty" class="posii" zoom="zoomProperty" markers="markersProperty" latitude="clickedLatitudeProperty" longitude="clickedLongitudeProperty" mark-click="false" draggable="true" style="height: 164px; width: 100%;transform:inherit;">
                             </google-map>
-
-
-                            <br>
-                            <div class="social-btn">
-                                <span class='st_facebook_hcount' displayText='Facebook'></span>
-                                <span class='st_twitter_hcount' displayText='Tweet'></span>
-                                <span class='st_linkedin_hcount' displayText='LinkedIn'></span>
-                                <span class='st_googleplus_hcount stMainServices' displayText='Google +'></span>
-                            </div>
                         </div>
 
                         <!--
@@ -97,18 +87,25 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="more-text">
-                        <h2 class="title text-center">More Information</h2>
+                        <div class="fortitle text-center">
+                            <h2 class="title">More Information</h2>
+                        </div>
+
                         <p class="fapadl"><i class="fa fa-info-circle fapadr"></i>{{detail.listing.description}}</p>
                         <p class="fapadl"><i class="fa fa-location-arrow fapadr"></i>&nbsp;{{detail.listing.address}}</p>
                         <p class="fapadl"><i class="fa fa-mobile fapadr"></i>&nbsp;{{detail.listing.contactno}}</p>
                     </div>
                     <div class="more-text">
-                        <h2 class="title text-center">Other categories</h2>
+                        <div class="fortitle text-center">
+                            <h2 class="title">Other categories</h2>
+                        </div>
                         <p class="fapadl" ng-repeat="category in detail.categories"><i class="fa fa-angle-double-right fapadr"></i>&nbsp;{{category.categoryname}}</p>
                     </div>
                     <div class="more-text">
 
-                        <h2 class="title text-center">Hours Of Operation</h2>
+                        <div class="fortitle text-center">
+                            <h2 class="title">Hours Of Operation</h2>
+                        </div>
                         <div class="fapd">
                             <i class="fa fa-calendar"></i>  <strong class="fapadl mhs" ng-repeat="operation in detail.daysofoperation">{{operation.daysofoperationname}}&nbsp;&nbsp;</strong>
                             <br>
@@ -119,14 +116,18 @@
                         </div>
                     </div>
                     <div class="more-text">
-                        <h2 class="title text-center">Modes Of Payment</h2>
+                        <div class="fortitle text-center">
+                            <h2 class="title">Modes Of Payment</h2>
+                        </div>
                         <div class="fapd fap">
                             <i class="fa fa-money"></i><span class="fapadl mhs" ng-repeat="payment in detail.modeofpayment">{{payment.modeofpaymentname}}</span>
                         </div>
                     </div>
                     <A NAME="enq"></A>
                     <div class="more-text">
-                        <h2 class="title text-center">Enquiry</h2>
+                        <div class="fortitle text-center">
+                            <h2 class="title text-center">Enquiry</h2>
+                        </div>
                         <div class="signup-form">
                             <div class="signupmsg">
                                 {{enquirymsg}}
