--- a/views/emailclick.html
+++ b/views/emailclick.html
@@ -2,7 +2,7 @@
                         <h2 class=" text-center" style="color:#049fb3;text-transform: uppercase;">Enquiry</h2>
                         <div class="signup-forms">
                             <div class="signupmsg">
-                                {{enquirymsg}}
+                                {{demo}}
                             </div>
                             <input type="text" ng-model="enquiry.name" class="form-control" ng-class="allvalidation[0].validation" placeholder="Name *" required/>
                             <input type="email" ng-model="enquiry.email" class="form-control" ng-class="allvalidation[1].validation" placeholder="Email *" required/>
