--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -28,6 +28,14 @@ width: 163px;
     font-size: 124%;
     /* font-weight: 100; */
 }
+.popupenquiry{
+    margin-bottom: 10px;
+  color: #307B37;
+  padding: 10px;
+  font-size: 93%;
+  background: rgba(4, 159, 179, 0.31);
+  text-align: center;
+}
 .posii{
 position: static !important;
 }
