--- a/views/header.html
+++ b/views/header.html
@@ -7,7 +7,7 @@
 					<div class="col-sm-6">
 						<div class="contactinfo">
 							<ul class="nav nav-pills">
-                                <li><a class="onlycursor" z><i class="fa fa-lock"></i> {{loginlogout}}</a></li>
+                                <li><a class="onlycursor" ng-click="loginfunction()"><i class="fa fa-lock"></i> {{loginlogout}}</a></li>
 								<li><a ng-click="showlisting()" class="onlycursor">&nbsp;&nbsp;List Your Business</a></li>
 								<a href="#/profile" class="onlycursor"><span class="symbol" style="font-size:13px; position: relative;left: 470px;top: 8px;color: #aeaeae;z-index:100000;" ng-click="showlisting()">{{myemail}}</span></a>
 <!--								<li><a href="#/listbusiness" class="onlycursor">&nbsp;&nbsp;List Your Business</a></li>-->
