--- a/views/profile.html
+++ b/views/profile.html
@@ -9,9 +9,9 @@
                         <h2>My Profile</h2>
                         <h5 class="demo">{{profilemsg}}</h5>
                         
-                        <input type="text" ng-model="profile.firstname" class="form-control" placeholder="First Name" />
-                        <input type="text" ng-model="profile.lastname" class="form-control" placeholder="Last Name" />
-                        <input type="email" ng-model="profile.email" class="form-control" ng-class="allvalidation[0].validation" required placeholder="Email Address *" />
+                        <input type="text" ng-model="profile.firstname" class="form-control" ng-class="allvalidation[0].validation" required placeholder="First Name" />
+                        <input type="text" ng-model="profile.lastname" class="form-control" ng-class="allvalidation[1].validation" required placeholder="Last Name" />
+                        <input type="email" ng-model="profile.email" class="form-control" ng-class="allvalidation[2].validation" required placeholder="Email Address *" />
                         <input type="number" min="6" ng-model="profile.contact" class="form-control" placeholder="Phone Number" />
                         <input type="text" ng-model="profile.dob" class="form-control" placeholder="Date Of Birth" />
                         <input type="text" ng-model="profile.website" class="form-control" placeholder="Website" />
