--- a/views/profile.html
+++ b/views/profile.html
@@ -12,7 +12,8 @@
                         <input type="text" ng-model="profile.firstname" class="form-control" ng-class="allvalidation[0].validation" required placeholder="First Name" />
                         <input type="text" ng-model="profile.lastname" class="form-control" ng-class="allvalidation[1].validation" required placeholder="Last Name" />
                         <input type="email" ng-model="profile.email" class="form-control" ng-class="allvalidation[2].validation" required placeholder="Email Address *" />
-                        <input type="number" min="6" ng-model="profile.contact" class="form-control" placeholder="Phone Number" />
+                        <input type="text" ng-model="profile.contact" class="form-control" placeholder="Contact" />
+                        <input type="text" ng-model="profile.phoneno" class="form-control" placeholder="Phone Number" />
                         <input type="text" ng-model="profile.dob" class="form-control" placeholder="Date Of Birth" />
                         <input type="text" ng-model="profile.website" class="form-control" placeholder="Website" />
 
