--- a/views/login.html
+++ b/views/login.html
@@ -1,70 +1,38 @@
-<section id="login"><!--form-->
+<section id="login">
+    <!--form-->
     <toaster-container></toaster-container>
-		<div class="container">
-			<div class="row">
-			<div class="">
-				<div class="col-md-5">
-					<div class="login-form" style="margin:-24px !important;"><!--login form-->
-						<h2>Login to your account</h2>
-<!--                        <h5 class="demo">{{msg}}</h5>-->
-							
-							<input type="email" ng-model="login.email" class="form-control" ng-class="allvalidation1[0].validation" required placeholder="Email Address * " />
-							<input type="password" ng-model="login.password" class="form-control" ng-class="allvalidation1[1].validation" required placeholder="Password *"/>
-							
-							<button class="btn form-control" ng-click="userlogin(login)">Login</button>
-							 <div class="home-invites text-center">
-    
-                                    <a href="#">
-                                        <p> <i class="fa fa-facebook"></i> SIGN IN WITH FACEBOOK</p>
-                                    </a>
-                                </div>
+    <div class="container">
+        <div class="row">
+            <div class="login-form" style="margin:-24px !important;">
+                <!--login form-->
+                <h2>Login to your account</h2>
+                <!--                        <h5 class="demo">{{msg}}</h5>-->
+
+                <input type="email" ng-model="login.email" class="form-control" ng-class="allvalidation1[0].validation" required placeholder="Email Address * " />
+                <input type="password" ng-model="login.password" class="form-control" ng-class="allvalidation1[1].validation" required placeholder="Password *" />
+
+                <button class="btn form-control" ng-click="userlogin(login)">Login</button>
                 <div class="home-invites text-center">
-    
-                                    <a href="#">
-                                        <p> <i class="fa fa-google-plus"></i> SIGN IN WITH GOOGLE</p>
-                                    </a>
-                                </div>
-<!--
+
+                    <a href="#">
+                        <p> <i class="fa fa-facebook"></i> SIGN IN WITH FACEBOOK</p>
+                    </a>
+                </div>
+                <div class="home-invites text-center">
+
+                    <a href="#">
+                        <p> <i class="fa fa-google-plus"></i> SIGN IN WITH GOOGLE</p>
+                    </a>
+                </div>
+                <!--
 							<span>
 								<input type="checkbox" class="checkbox form-control"> 
 								Keep me signed in
 							</span>
 -->
-							
-					</div><!--/login form-->
-				</div>
-				<div class="col-md-2">
-					<h2 class="or">OR</h2>
-				</div>
-				<div class="col-md-5">
-					<div class="login-form " style="margin:-24px !important;"><!--sign up form-->
-						<h2>New User Signup!</h2>
-<!--                        <h5 class="demo">{{signupmsg}}</h5>-->
-							<input type="text" ng-model="signup.firstname" class="form-control" ng-class="allvalidation[0].validation" required placeholder="First Name *"/>
-							<input type="text" ng-model="signup.lastname" class="form-control" ng-class="allvalidation[1].validation" required placeholder="Last Name *"/>
-							<input type="number" min="6" ng-model="signup.phoneno" class="form-control" ng-class="allvalidation[2].validation" required placeholder="Phone Number *"/>
-							<input type="email" ng-model="signup.email" class="form-control" ng-class="allvalidation[3].validation" required placeholder="Email Address *"/>
-							<input type="password" ng-model="signup.password" class="form-control" ng-class="allvalidation[4].validation" required placeholder="Password *"/>
-							<input type="password" ng-model="signup.cpassword" class="form-control" ng-class="allvalidation[5].validation" required placeholder="Confirm Password *"/>
-							     
-                                  <button class="btn  form-control" ng-click="signupuser(signup)">Signup</button>
-                                  
-                                   <div class="home-invites text-center">
-    
-                                    <a href="#">
-                                        <p> <i class="fa fa-facebook"></i> SIGN IN WITH FACEBOOK</p>
-                                    </a>
-                                </div>
-                <div class="home-invites text-center">
-    
-                                    <a href="#">
-                                        <p> <i class="fa fa-google-plus"></i> SIGN IN WITH GOOGLE</p>
-                                    </a>
-                                </div>
-							
-					</div><!--/sign up form-->
-				</div>
-				</div>
-			</div>
-		</div>
-	</section><!--/form-->
+
+            </div>
+        </div>
+    </div>
+</section>
+<!--/form-->
