--- a/views/detail.html
+++ b/views/detail.html
@@ -1,5 +1,6 @@
 <section>
     <div class="container">
+        <toaster-container></toaster-container>
         <div class="row">
 
             <!-- <h3>Girls Pink T Shirt arrived in store</h3>
