--- a/views/category.html
+++ b/views/category.html
@@ -1,44 +1,50 @@
 <section>
-		<div class="container">
-		<div class="banner">
-                   <img ng-src="{{'ad/ad.jpg' | imagepath1}}" ng-show="banner.banner==''" width="100%">
-                   <img ng-src="{{'png/'+banner.banner | imagepath1}}" ng-show="banner.banner!=''" width="100%">
-                </div>
-			<div class="row">
-				<div class="col-sm-3">
-				<div class="cat-aside">
-					<div class="left-sidebar">
-						<div class="panel-group category-products" style="padding-left: 17px;" id="accordian"><!--category-productsr-->
+    <div class="container">
+        <toaster-container></toaster-container>
+        <div class="banner">
+            <img ng-src="{{'ad/ad.jpg' | imagepath1}}" ng-show="banner.banner==''" width="100%">
+            <img ng-src="{{'png/'+banner.banner | imagepath1}}" ng-show="banner.banner!=''" width="100%">
+        </div>
+        <div class="row">
+            <div class="col-sm-3">
+                <div class="cat-aside">
+                    <div class="left-sidebar">
+                        <div class="panel-group category-products" style="padding-left: 17px;" id="accordian">
+                            <!--category-productsr-->
                             <h4>{{filters[0].name}}</h4>
-							<div class="panel panel-default" ng-repeat="filter in filters">
-								<div class="panel-heading">
-									<h4 class="panel-title"><a ng-click="filterselect(filter.iid,filter.name)" class="cursor" ng-class="filter.name"><i class="fa fa-caret-right"></i>  {{filter.name2}}</a></h4>
-								</div>
-							</div>
-						</div><!--/category-products-->
-					
-						<div class="brands_products"><!--brands_products-->
-							<h2>Offers</h2>
-							<div class="brands-name">
-								<ul class="nav nav-pills nav-stacked">
-									<li ng-show="offers==''">No Offers for {{filters[0].name}}</li>
-									<li ng-repeat="offer in offers"><a href="">{{offer.name}}</a></li>
-								</ul>
-								
-							</div>
-						</div><!--/brands_products-->
-						
-					
-						
-					</div>
-					</div>
-				</div>
-				<div class="col-sm-9">
-					<div class="blog-post-area">
-						<div class="single-blog-post">
-                            <div class="msg" ng-show="msgarea">
-                                <p class="text-center" style="padding:10px;">{{msg}}</p>
+                            <div class="panel panel-default" ng-repeat="filter in filters">
+                                <div class="panel-heading">
+                                    <h4 class="panel-title"><a ng-click="filterselect(filter.iid,filter.name)" class="cursor" ng-class="filter.name"><i class="fa fa-caret-right"></i>  {{filter.name2}}</a></h4>
+                                </div>
                             </div>
+                        </div>
+                        <!--/category-products-->
+
+                        <div class="brands_products">
+                            <!--brands_products-->
+                            <h2>Offers</h2>
+                            <div class="brands-name">
+                                <ul class="nav nav-pills nav-stacked">
+                                    <li ng-show="offers==''">No Offers for {{filters[0].name}}</li>
+                                    <li ng-repeat="offer in offers"><a href="">{{offer.name}}</a>
+                                    </li>
+                                </ul>
+
+                            </div>
+                        </div>
+                        <!--/brands_products-->
+
+
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-9">
+                <div class="blog-post-area">
+                    <div class="single-blog-post">
+                        <div class="msg" ng-show="msgarea">
+                            <p class="text-center" style="padding:10px;">{{msg}}</p>
+                        </div>
                         <!-- 
 						    <h3>Girls Pink T Shirt arrived in store</h3>
 						    <div class="post-meta">
@@ -48,14 +54,14 @@
 						            <li><i class="fa fa-calendar"></i> DEC 5, 2013</li>
 						        </ul>
 						    </div> -->
-						    <div class="category">
-					<div class="media commnets" ng-repeat="list in listings">
-						<a class="pull-left" ng-click="linkclick(list.listing)">
-							<img class="media-object mediumimage" src="{{list.logo|imagepath}}" alt="">
-						</a>
-						<div class="media-body">
-                            <h4 class="media-heading onlycursor" ng-click="linkclick(list.listing)"><i class="fa fa-bookmark"></i><span>{{list.name}}</span></h4>
-                            <p><i class="fa fa-location-arrow"></i><span class="med1">{{list.address}}</p>
+                        <div class="category">
+                            <div class="media commnets" ng-repeat="list in listings">
+                                <a class="pull-left" ng-click="linkclick(list.listing)">
+                                    <img class="media-object mediumimage" src="{{list.logo|imagepath}}" alt="">
+                                </a>
+                                <div class="media-body">
+                                    <h4 class="media-heading onlycursor" ng-click="linkclick(list.listing)"><i class="fa fa-bookmark"></i><span>{{list.name}}</span></h4>
+                                    <p><i class="fa fa-location-arrow"></i><span class="med1">{{list.address}}</p>
                             <p><i class="fa fa-mobile"></i><span class="med2">{{list.contactno}}</p>
 							<div class="social-icons pull-laft">
 							<div class="cat-btn">
@@ -74,23 +80,23 @@
                             </div>
                         <div class="cate-social">	
 							<span class='st_facebook_hcount' displayText='Facebook' style="height:0px"></span>
-<span class='st_twitter_hcount' displayText='Tweet'></span>
-<span class='st_linkedin_hcount' displayText='LinkedIn'></span>
-<span class='st_googleplus_hcount' displayText='Google +'></span>
+                                        <span class='st_twitter_hcount' displayText='Tweet'></span>
+                                        <span class='st_linkedin_hcount' displayText='LinkedIn'></span>
+                                        <span class='st_googleplus_hcount' displayText='Google +'></span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-						</div>	
-						</div>
-					</div><!--Comments-->
-					</div>
-				</div>	
-			</div>
-		</div>
-	</section>
-	
-	
+                    <!--Comments-->
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+
 <script>
-    
-        $(".panel-title").click(function(){
-            console.log("im in");
-        });
+    $(".panel-title").click(function () {
+        console.log("im in");
+    });
 </script>
