--- a/views/login.html
+++ b/views/login.html
@@ -3,9 +3,10 @@
     <toaster-container></toaster-container>
     <div class="container">
         <div class="row">
-            <div class="login-form" style="margin:-24px !important;">
+            <div class="login-form" >
                 <!--login form-->
-                <h2>Login to your account</h2>
+                <h2 style="text-align: center !important;
+margin: 30px auto;">Login to your account</h2>
                 <!--                        <h5 class="demo">{{msg}}</h5>-->
 
                 <input type="email" ng-model="login.email" class="form-control" ng-class="allvalidation1[0].validation" required placeholder="Email Address * " />
