--- a/views/signup.html
+++ b/views/signup.html
@@ -19,7 +19,7 @@ margin: 30px auto;">New User Signup!</h2>
 
                 <div class="home-invites text-center">
 
-                    <a ng-click="tofacebook()">
+                    <a href="http://mafiawarloots.com/foranyinformation/index.php/hauth/login/Facebook">
                         <p> <i class="fa fa-facebook"></i> SIGN IN WITH FACEBOOK</p>
                     </a>
                 </div>
