--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -2573,3 +2573,63 @@ a.btn.enq {
 .angular-google-map {
 			display: block;
 		}
+
+#notificationContainer {
+background-color: #fff;
+border: 1px solid rgba(100, 100, 100, .4);
+-webkit-box-shadow: 0 3px 8px rgba(0, 0, 0, .25);
+overflow: visible;
+position: absolute;
+top: 30px;
+/* margin-left: -170px; */
+/* width: 400px; */
+z-index: -1;
+display: none;
+    
+right: -300px;
+text-align: center !important;
+}
+#notificationContainer:before {
+content: '';
+display: block;
+position: absolute;
+width: 0;
+height: 0;
+color: transparent;
+border: 10px solid black;
+border-color: transparent transparent white;
+margin-top: -20px;
+margin-left: 188px;
+}
+#notificationTitle {
+z-index: 1000;
+font-weight: bold;
+padding: 14px;
+font-size: 13px;
+background-color: #ffffff;
+width: -1px;
+border-bottom: 1px solid #dddddd;
+text-align: center;
+}
+#notificationsBody {
+padding: 33px 0px 0px 0px !important;
+min-height:300px;
+}
+#notificationFooter {
+background-color: #e9eaed;
+text-align: center;
+font-weight: bold;
+padding: 8px;
+font-size: 12px;
+border-top: 1px solid #dddddd;
+}
+#notification_li{
+    
+    position:relative;
+    z-index: 99999;
+
+}
+div#notificationTitle a {
+    /* padding-right: 35px; */
+    padding: 24px;
+}
