--- a/views/header.html
+++ b/views/header.html
@@ -12,12 +12,12 @@
                             <li><a ng-click="showlisting()" class="onlycursor">&nbsp;&nbsp;List Your Business</a>
                             </li>
                             <div id="notification_li">
-                            <a href="#/profile" class="onlycursor" id="notificationLink"><span class="symbol" style="font-size:13px; position: relative;left: 470px;top: 8px;color: #aeaeae;z-index:100000;" ng-click="showlisting()">{{myemail}}</span></a>
+                            <a class="onlycursor" id="notificationLink"><span class="symbol" style="font-size:13px; position: relative;left: 470px;top: 8px;color: #aeaeae;z-index:100000;">{{myemail}}</span></a>
                             <!--								<li><a href="#/listbusiness" class="onlycursor">&nbsp;&nbsp;List Your Business</a></li>-->
                             <!-- <li><a href="#"><i class="fa fa-phone"></i> +2 95 01 88 821</a></li>
 								<li><a href="#"><i class="fa fa-envelope"></i> info@domain.com</a></li> -->
                             <div id="notificationContainer">
-                                <div id="notificationTitle"><a href="#">Visit Profile</a><a href="#">Change Password</a></div>
+                                <div id="notificationTitle"><a ng-click="gotoprofile()">Visit Profile</a><a href="#">Change Password</a></div>
                               
                             </div>
                             </div>
