--- a/views/slider.html
+++ b/views/slider.html
@@ -65,7 +65,7 @@
                             <option class="onlycursor" style="background:rgba(229, 83, 94, 0.2);" ng-repeat="city in cities" value="{{city.id}}">{{city.name}}</option>
                         </select>
                         <span class="city-search">
-                <i class="fa fa-map-marker fapadr"><span class="city-pad">{{area}}</span>
+                <i class="fa fa-map-marker fapadr"><span class="city-pad">{{area1}}</span>
                         </i>
                         </span>
 
