--- a/views/login.html
+++ b/views/login.html
@@ -15,7 +15,7 @@ margin: 30px auto;">Login to your account</h2>
                 <button class="btn form-control" ng-click="userlogin(login)">Login</button>
                 <div class="home-invites text-center">
 
-                    <a href="#">
+                    <a href="http://mafiawarloots.com/foranyinformation/index.php/hauth/login/Facebook">
                         <p> <i class="fa fa-facebook"></i> SIGN IN WITH FACEBOOK</p>
                     </a>
                 </div>
