--- a/views/detail.html
+++ b/views/detail.html
@@ -70,7 +70,7 @@
 
     <div class="container" ng-if="detail.images!=''">
         <div class="row">
-            
+
             <div class="col-md-12">
                 <div class="image-row">
                     <img src="{{img.image|imagepath}}" class="lightbox" ng-click="imagelightbox(img.image)" height="80px" width="150px" ng-repeat="img in detail.images">
@@ -79,7 +79,7 @@
 
                 </div>
             </div>
-         
+
         </div>
 
     </div>
@@ -145,6 +145,17 @@
                     <div class="facebook-deatils">
                         <div class="fb-like-box" data-href="https://www.facebook.com/{{detail.listing.facebook}}" data-colorscheme="light" data-show-faces="true" data-header="true" data-stream="true" data-show-border="true"></div>
                     </div>
+                    <script>
+                        (function (d, s, id) {
+                            var js, fjs = d.getElementsByTagName(s)[0];
+                            if (d.getElementById(id)) return;
+                            js = d.createElement(s);
+                            js.id = id;
+                            js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=623204201082335&version=v2.0";
+                            fjs.parentNode.insertBefore(js, fjs);
+                        }(document, 'script', 'facebook-jssdk'));
+                    </script>
+
                     <div class="recent-box">
 
                         <div class="panel panel-default">
