--- a/views/profile.html
+++ b/views/profile.html
@@ -19,7 +19,7 @@
 
                         <input type="text" ng-model="profile.address" class="form-control" placeholder="Address" />
                         <input type="text" ng-model="profile.city" class="form-control" placeholder="city" />
-                        <input type="number" ng-model="profile.pincode" class="form-control" placeholder="Pincode" />
+                        <input type="text" ng-model="profile.pincode" class="form-control" placeholder="Pincode" />
                         <input type="text" ng-model="profile.state" class="form-control" placeholder="State" />
                         <input type="text" ng-model="profile.country" class="form-control" placeholder="Country" />
 
