--- a/views/signup.html
+++ b/views/signup.html
@@ -3,7 +3,7 @@
     <toaster-container></toaster-container>
     <div class="container">
         <div class="row">
-            <div class="login-form " >
+            <div class="login-form login " >
                 <!--sign up form-->
                 <h2 style="text-align: center !important;
 margin: 30px auto;">New User Signup!</h2>
