--- a/views/login.html
+++ b/views/login.html
@@ -3,7 +3,7 @@
     <toaster-container></toaster-container>
     <div class="container">
         <div class="row">
-            <div class="login-form" >
+            <div class="login-form login" >
                 <!--login form-->
                 <h2 style="text-align: center !important;
 margin: 30px auto;">Login to your account</h2>
