--- a/views/category.html
+++ b/views/category.html
@@ -7,7 +7,7 @@
         </div>
         <div class="row">
             <div class="col-sm-3">
-                <div class="cat-aside">
+                <div class="cat-aside" >
                     <div class="left-sidebar">
                         <div class="panel-group category-products" style="padding-left: 17px;" id="accordian">
                             <!--category-productsr-->
@@ -64,11 +64,12 @@
                                     <p><i class="fa fa-location-arrow"></i><span class="med1">{{list.address}}</p>
                             <p><i class="fa fa-mobile"></i><span class="med2">{{list.contactno}}</p>
 							<div class="social-icons pull-laft">
-							<div class="cat-btn">
+							<div class="cat-btn" style="margin: -9px auto;">
                             <p class="pull-left">
                                 <a class="btn btn-primary mrr" href="">Send SMS</a>
                                 <a class="btn btn-primary mrr" ng-click="sendemail(list.listing)">Send Email</a>
-                                <a class="btn btn-primary mrr enq " ng-click="onemailclick(list.listing);">Enquiry</a>
+                                <a class="btn btn-primary mrr enq " ng-click="onemailclick(list.listing);" style="position: absolute;
+left: 387px;">Enquiry</a>
                                 
 
 <!--                                <a class="btn btn-primary mrr" href="">Other Posts</a>-->
