--- a/views/changepassword.html
+++ b/views/changepassword.html
@@ -1,28 +1,21 @@
 <section id="login">
-    <!--form-->
     <toaster-container></toaster-container>
     <div class="container">
         <div class="row">
-            <div class="login-form login" >
-                <!--login form-->
+            <div class="login-form login">
                 <h2 style="text-align: center !important;
 margin: 30px auto;">Change Password</h2>
-                <!--                        <h5 class="demo">{{msg}}</h5>-->
 
-                <input type="password" ng-model="login.email" class="form-control" ng-class="allvalidation1[0].validation" required placeholder="Currant Password* " />
-                <input type="password" ng-model="login.password" class="form-control" ng-class="allvalidation1[1].validation" required placeholder="New Password *" />
+                <input type="password" ng-model="login.oldpassword" class="form-control" ng-class="allvalidation1[0].validation" required placeholder="Currant Password* " />
+                
+                <input type="password" ng-model="login.newpassword" class="form-control" ng-class="allvalidation1[1].validation" required placeholder="New Password *" />
+                
+                <input type="password" ng-model="login.confirmpassword" class="form-control" ng-class="allvalidation1[2].validation" required placeholder="Confirm Password *" />
 
-                <button class="btn form-control" ng-click="userlogin(login)">Submit</button>
-               
-                <!--
-							<span>
-								<input type="checkbox" class="checkbox form-control"> 
-								Keep me signed in
-							</span>
--->
+                <button class="btn form-control" ng-click="changepassword(login)">Submit</button>
+
 
             </div>
         </div>
     </div>
 </section>
-<!--/form-->
