--- a/views/header.html
+++ b/views/header.html
@@ -17,7 +17,7 @@
                             <!-- <li><a href="#"><i class="fa fa-phone"></i> +2 95 01 88 821</a></li>
 								<li><a href="#"><i class="fa fa-envelope"></i> info@domain.com</a></li> -->
                             <div id="notificationContainer">
-                                <div id="notificationTitle"><a ng-click="gotoprofile()">Visit Profile</a><a href="#">Change Password</a></div>
+                                <div id="notificationTitle"><a ng-click="gotoprofile()">Visit Profile</a><a ng-click="gotochangepass()">Change Password</a></div>
                               
                             </div>
                             </div>
