--- a/lib/css/main.css
+++ b/lib/css/main.css
@@ -2589,7 +2589,7 @@ position: absolute;
 top: 30px;
 /* margin-left: -170px; */
 /* width: 400px; */
-z-index: -1;
+/* z-index: -1; */
 /*display: none;*/
     
 right: -300px;
