--- a/views/innerheader.html
+++ b/views/innerheader.html
@@ -3,7 +3,7 @@
 				<div class="row">
 					<div class="col-sm-8">
 						<div class="logo pull-left">
-							<a href="#/home"><img src="lib/images/home/logo2.png" style="height:45px;" alt="" /></a>
+							<a href="#/home"><img ng-src="lib/images/home/logo2.png" style="height:45px;" alt="" /></a>
 						</div>
 						<div class="btn-group pull-right">
 								<form action="#" class="searchform">
