--- a/views/navigation.html
+++ b/views/navigation.html
@@ -7,7 +7,7 @@
 						</a>
 					</div>
             <p class="text-center mrt10">
-                <a href="#/home"><img src="{{'home/logo2.png'|imagepath1}}" style="height:100px;" /></a>
+                <a href="#/home"><img ng-src="{{'home/logo2.png'|imagepath1}}" style="height:100px;" /></a>
             </p>
             
         </div>
