--- a/views/slider.html
+++ b/views/slider.html
@@ -29,7 +29,7 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item {{slider1.active}}" ng-repeat="slider1 in positionone">
-                            <img src="{{slider1.image|imagepath}}" alt="" height="100%" width="100%">
+                            <img ng-src="{{slider1.image|imagepath}}" alt="" height="100%" width="100%">
                             <div class="carousel-caption">
                                 {{slider1.name}}
                             </div>
@@ -108,7 +108,7 @@
                     <!-- Wrapper for slides -->
                     <div class="carousel-inner">
                         <div class="item {{slider2.active}}" ng-repeat="slider2 in positiontwo">
-                            <img src="{{slider2.image|imagepath}}" alt="" height="100%" width="100%">
+                            <img ng-src="{{slider2.image|imagepath}}" alt="" height="100%" width="100%">
                             <div class="carousel-caption">
                                 {{slider2.name}}
                             </div>
